4.3.0 2022xxxx
BF: Build: Optimization/correction of the release info process
CR: Template: Added methods to customize document and/or pages
    To add signatures, encryption, comments, remove blank pages, add new pages, ...

4.2.0 20220811
BF: Review: Optimizations
BF: Generator: Correction when parsing structures
    Structures deeper 65535 levels no longer cause an exception.
CR: Change from wording segment, which is now called structure
CR: Generator: Added placeholder syntax for disposable structures
    e.g. #[scope{{...}}]
    Disposable structures are bound to their place and, unlike a normal
    structure, can be defined differently multiple times, but cannot be
    reused or extracted based on their identifier.
CR: Generator: Added structures for single values
    e.g. #[price[[Your price #[#] Euro]]]
         #[price{{Your price #[#] Euro}}]
    Previously, single values was output directly. Now a structure can be
    used here as well. For single value, the additional placeholder #[#] was
    introduced. These structures can also be used to replace the exists
    placeholder and for conditional output of static text.
    e.g. #[value[[text output only if value exists]]]
         #[value{{text output only if value exists}}]
    Placeholders for static texts can be used from.
    e.g. #[price[[Your price #[#] ![currency]]]]
         #[price{{Your price #[#] ![currency]}}]
CR: Generator: Placeholder identifier conventions optimized
    Optimized for the conventions for variables in Java.
    Identifier can start and end with characters: a-z A-Z _ $ in between the
    characters: a-z A-Z _ - $ can be used.

4.1.2 20220713
BF: Build: Optimization of the release info process
BF: Maven: Update of dependencies
BF: Template: Correction for handling unexpected data type in data map
    e.g. Collection with Integer caused errors

4.1.1 20220327
BF: Maven: Update of dependencies
    CVE-2020-36518
BF: Build: Optimization of the release info process